--- a/Whole_TF_ReLayNet-Copy1.ipynb
+++ b/Whole_TF_ReLayNet-Copy1.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\" \n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\""
    ]
   },
   {
@@ -428,9 +428,9 @@
     "train_labels = train_labels.astype('float32')\n",
     "test_images = test_images.astype('float32')\n",
     "test_labels = test_labels.astype('float32')\n",
-    "print(train_images.shape)\n",
-    "print(test_images.shape)\n",
-    "print(test_labels.shape)"
+    "# print(train_images.shape)\n",
+    "# print(test_images.shape)\n",
+    "# print(test_labels.shape)"
    ]
   },
   {
@@ -441,9 +441,9 @@
    },
    "outputs": [],
    "source": [
-    "print (len(train_images))\n",
-    "print (len(train_labels))\n",
-    "print (np.array(train_labels).shape)"
+    "# print (len(train_images))\n",
+    "# print (len(train_labels))\n",
+    "# print (np.array(train_labels).shape)"
    ]
   },
   {
@@ -480,7 +480,7 @@
     "weights_matrix = []\n",
     "for i in train_indices:\n",
     "    weights_matrix.append(weights[i])\n",
-    "print(len(weights_matrix))"
+    "# print(len(weights_matrix))"
    ]
   },
   {
@@ -722,14 +722,14 @@
    },
    "outputs": [],
    "source": [
-    "# His are floats\n",
-    "new_count = np.zeros(8)\n",
-    "for i in range(8):\n",
-    "    new_count[i] = float(count[i])\n",
-    "#     print(new_count[i])\n",
-    "count = new_count\n",
-    "for i in range(8):\n",
-    "    print(count[i])"
+    "# # His are floats\n",
+    "# new_count = np.zeros(8)\n",
+    "# for i in range(8):\n",
+    "#     new_count[i] = float(count[i])\n",
+    "# #     print(new_count[i])\n",
+    "# count = new_count\n",
+    "# for i in range(8):\n",
+    "#     print(count[i])"
    ]
   },
   {
@@ -883,7 +883,7 @@
     "bs = 40\n",
     "epoch = 500\n",
     "# named = \"models/Trained_Networks/notnormalised_bs50_ep_50\"+str(i).replace('.','_')\n",
-    "named = \"models/Normalised/weightingval1_notnormalised_bs{}_ep_{}\".format(bs,epoch)"
+    "named = \"models/Normalised/weightingval1_notnormalised_weightsnotscaled_bs{}_ep_{}\".format(bs,epoch)"
    ]
   },
   {
