--- a/Whole_TF_ReLayNet.ipynb
+++ b/Whole_TF_ReLayNet.ipynb
@@ -209,18 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Getting Raw Images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "alldata_direct = \"/home/sim/notebooks/relaynet_pytorch/datasets/OCTData/alldata/\""
+    "### Setting Directory"
    ]
   },
   {
@@ -231,7 +220,38 @@
    },
    "outputs": [],
    "source": [
-    "filenames, raw_images = get_data(alldata_direct+'whole_raw_image/Train','.png')\n",
+    "# Setting the directories\n",
+    "import os\n",
+    "\n",
+    "wanted_folder = 'alldata/'\n",
+    "# wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'Atrium/'\n",
+    "# wanted_folder = 'Ventricle/'\n",
+    "\n",
+    "cwd = os.getcwd()\n",
+    "check_directory = cwd\n",
+    "print(check_directory)\n",
+    "# cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
+    "cwd = cwd + '/datasets/OCTData/'+wanted_folder\n",
+    "print(cwd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting Raw Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "filenames, raw_images = get_data(cwd+'whole_raw_image/Train','.png')\n",
     "print(filenames[128])\n",
     "print (raw_images[0].shape)\n",
     "plt.imshow(raw_images[0],cmap = \"gray\")"
@@ -253,7 +273,7 @@
    "outputs": [],
    "source": [
     "# Getting manual labelled Images\n",
-    "_, manual_labels = get_data(alldata_direct+'manual_label/Train','.png')\n",
+    "_, manual_labels = get_data(cwd+'manual_label/Train','.png')\n",
     "print(filenames[128])\n",
     "print (manual_labels[0].shape)\n",
     "plt.imshow(manual_labels[0])"
@@ -274,7 +294,7 @@
    },
    "outputs": [],
    "source": [
-    "_, labels_list = get_data(alldata_direct+'/png_labels_method/Train/segmented_ids','.npy')\n",
+    "_, labels_list = get_data(cwd+'/png_labels_method/Train/segmented_ids','.npy')\n",
     "print(filenames[128])\n",
     "print(labels_list[0].shape)"
    ]
@@ -350,7 +370,7 @@
    },
    "outputs": [],
    "source": [
-    "_, weights = get_data(alldata_direct+'/png_labels_method/Train/weights','.npy')\n",
+    "_, weights = get_data(cwd+'/png_labels_method/Train/weights','.npy')\n",
     "print(filenames[128])\n",
     "print(len(weights),weights[0].shape)\n",
     "print(weights[0][0][0])\n",
