Trained models - interested in bs 200 only

--- a/Resize_Whole_Data.ipynb
+++ b/Resize_Whole_Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -126,8 +126,11 @@
     "\n",
     "cwd = os.getcwd()\n",
     "check_directory = cwd\n",
-    "print(check_directory)\n",
-    "cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
+    "if check_directory == '/home/sim/notebooks/relaynet_pytorch':\n",
+    "    cwd = cwd + '/datasets/OCTData/'+wanted_folder\n",
+    "elif check_directory == '/Users/sim/Desktop/Imperial/Project/PreTrained/relaynet_pytorch':\n",
+    "    cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
+    "\n",
     "print(cwd)"
    ]
   },
@@ -135,7 +138,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -145,10 +148,18 @@
     "manual_label_folder = cwd + 'manual_label/'\n",
     "all_labels_folder = cwd + 'all_labels/'\n",
     "sim_labels_folder = cwd + 'my_labels/'\n",
-    "# corrected_labels_folder = cwd + 'labels_corrected/'\n",
     "corrected_labels_folder = cwd + 'png_labels_method/'\n",
+    "# normalised_folder = cwd + 'normalised_raw_image/'\n",
+    "normalised_folder = cwd + 'normalised_raw_2/' # normalising with atrium vs atrium and ventricle vs ventricle\n",
     "\n",
-    "list_of_folders = [whole_raw_image_folder, brushlet_denoised_folder, brushlet_enhanced_folder, manual_label_folder, all_labels_folder, sim_labels_folder, corrected_labels_folder]\n",
+    "list_of_folders = [whole_raw_image_folder, \\\n",
+    "                   brushlet_denoised_folder, \\\n",
+    "                   brushlet_enhanced_folder, \\\n",
+    "                   manual_label_folder, \\\n",
+    "                   all_labels_folder, \\\n",
+    "                   sim_labels_folder, \\\n",
+    "                   corrected_labels_folder, \\\n",
+    "                normalised_folder]\n",
     "print(len(list_of_folders))\n",
     "def list_all_files(directory):\n",
     "    from os import listdir\n",
@@ -166,7 +177,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -197,7 +208,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -232,7 +243,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -252,7 +263,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -386,7 +397,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -394,29 +405,35 @@
     "    filelist = [ f for f in os.listdir(mydir) if f.endswith(ext) ]\n",
     "    for f in filelist:\n",
     "        os.remove(os.path.join(mydir, f))\n",
-    "remove = False\n",
+    "remove = True\n",
     "if remove:\n",
-    "    whole_raw_image_folder_rem = cwd + 'whole_raw_image/Train/'\n",
-    "    brushlet_enhanced_folder_rem = cwd + 'brushlet_enhanced/Train/'\n",
-    "    brushlet_denoised_folder_rem = cwd + 'brushlet_denoised/Train/'\n",
-    "    manual_label_folder_rem = cwd + 'manual_label/Train/'\n",
-    "    all_labels_folder_ids_rem = cwd + 'all_labels/Train/segmented_ids/'\n",
-    "    all_labels_folder_weights_rem = cwd + 'all_labels/Train/weights/'\n",
-    "    sim_labels_folder_ids_rem = cwd + 'my_labels/Train/segmented_ids/'\n",
-    "    sim_labels_folder_weights_rem = cwd + 'my_labels/Train/weights/'\n",
-    "    corrected_labels_folder_ids_rem = cwd + 'png_labels_method/Train/segmented_ids/'\n",
-    "    corrected_labels_folder_weights_rem = cwd + 'png_labels_method/Train/weights/'\n",
+    "#     whole_raw_image_folder_rem = whole_raw_image_folder + 'Train/'\n",
+    "#     brushlet_enhanced_folder_rem = brushlet_enhanced_folder +'Train/'\n",
+    "#     brushlet_denoised_folder_rem = brushlet_denoised_folder+'Train/'\n",
+    "#     manual_label_folder_rem = manual_label_folder+'Train/'\n",
     "    \n",
-    "    remove_files(whole_raw_image_folder_rem, '.png')\n",
-    "    remove_files(brushlet_enhanced_folder_rem, '.png')\n",
-    "    remove_files(brushlet_denoised_folder_rem, '.png')\n",
-    "    remove_files(manual_label_folder_rem, '.png')\n",
-    "    remove_files(all_labels_folder_ids_rem, '.npy')\n",
-    "    remove_files(all_labels_folder_weights_rem, '.npy')\n",
-    "    remove_files(sim_labels_folder_ids_rem, '.npy')\n",
-    "    remove_files(sim_labels_folder_weights_rem, '.npy')\n",
-    "    remove_files(corrected_labels_folder_ids_rem, '.npy')\n",
-    "    remove_files(corrected_labels_folder_weights_rem, '.npy')"
+    "#     all_labels_folder_ids_rem = all_labels_folder + 'Train/segmented_ids/'\n",
+    "#     all_labels_folder_weights_rem = all_labels_folder +'Train/weights/'\n",
+    "   \n",
+    "#     sim_labels_folder_ids_rem = sim_labels_folder + 'Train/segmented_ids/'\n",
+    "#     sim_labels_folder_weights_rem = sim_labels_folder + 'Train/weights/'\n",
+    "    \n",
+    "#     corrected_labels_folder_ids_rem = corrected_labels_folder + 'Train/segmented_ids/'\n",
+    "#     corrected_labels_folder_weights_rem = corrected_labels_folder + 'Train/weights/'\n",
+    "    \n",
+    "    normalised_folder_rem = normalised_folder + 'Train/'\n",
+    "    \n",
+    "#     remove_files(whole_raw_image_folder_rem, '.png')\n",
+    "#     remove_files(brushlet_enhanced_folder_rem, '.png')\n",
+    "#     remove_files(brushlet_denoised_folder_rem, '.png')\n",
+    "#     remove_files(manual_label_folder_rem, '.png')\n",
+    "#     remove_files(all_labels_folder_ids_rem, '.npy')\n",
+    "#     remove_files(all_labels_folder_weights_rem, '.npy')\n",
+    "#     remove_files(sim_labels_folder_ids_rem, '.npy')\n",
+    "#     remove_files(sim_labels_folder_weights_rem, '.npy')\n",
+    "#     remove_files(corrected_labels_folder_ids_rem, '.npy')\n",
+    "#     remove_files(corrected_labels_folder_weights_rem, '.npy')\n",
+    "    remove_files(normalised_folder_rem, '.png')"
    ]
   },
   {
@@ -435,7 +452,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -467,7 +484,8 @@
     "\n",
     "        correct_label = plt.imread(corrected_labels_folder+'label_'+new_file_list[i]+'_labels.png') # label (ids) - needs to be segmented and used to create weight\n",
     "        correct_label = ((correct_label*7)/np.max(values)).astype(int)\n",
-    "#         print(np.unique(correct_label))\n",
+    "        \n",
+    "        normalised = plt.imread(normalised_folder+files_list[7][i])\n",
     "        \n",
     "        # crop and save all files necessary\n",
     "        crop_and_save_raw(whole_raw, whole_raw_image_folder, new_file_list[i])\n",
@@ -477,6 +495,8 @@
     "#         crop_and_save_label(label, all_labels_folder, new_file_list[i])\n",
     "#         crop_and_save_label(sim_label, sim_labels_folder, new_file_list[i])\n",
     "        crop_and_save_label(correct_label, corrected_labels_folder, new_file_list[i])\n",
+    "    \n",
+    "        crop_and_save_raw(normalised, normalised_folder, new_file_list[i])\n",
     "\n",
     "#         image_array = [whole_raw, b_d, b_e, man_lab, label]    \n",
     "#         image_name = ['whole_raw_1', 'b_d_1', 'b_e_1', 'man_lab_1', 'label_1']\n",
@@ -493,7 +513,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -561,7 +581,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -601,7 +621,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -637,7 +657,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -668,7 +688,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -712,7 +732,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
